# euro-supermercados

./: .gitignore  README.md  dvc.yaml  params.yaml  precompute_recommendation_model_clustering.sh  pyproject.toml  requirements.txt  run_prediction_date.sh  train_recommendation_model.sh
data/processed/: calendar_features.parquet  daily.parquet
docs/: README.md  api_referencia.md  arquitectura.md  ciencia_de_datos.md  configuracion.md  guia_ejecucion.md  segmentacion_clientes.md
models/: .gitignore  calibrated_model.joblib  model.joblib
notebooks/: 01_pipeline_predictivo.ipynb  02_segmentacion_clientes.ipynb  03_recomendador_colaborativo.ipynb  clustering.ipynb  model_probability.ipynb  model_recommedator.ipynb  pipeline_prob_compra_cliente.ipynb  recomendador_por_historia_usuario.ipynb  review_predition.ipynb
reports/: backtest_metrics.csv  backtest_metrics.txt  backtesting_metrics.csv  classification_report_base.txt  classification_report_calibrated.txt  metrics.json  metrics.txt  train_metrics.txt
src/: add_cluster_recommendations.py  add_recommendations.py  api_client.py  backtest.py  client_filters.py  collaborative.py  config.py  data_io.py  download_vip.py  evaluate.py  featurize.py  get_recommendations.py  load_data.py  patterns.py  predict.py  preprocess.py  segmentar_clientes.py  train.py  train_recommender.py  train_recommender_by_client.py  train_recommender_by_clustering.py  utils.py
src/data/: build_ventas_domicilio.py  filter_clients.py  load.py
src/features/: build_features.py
src/models/: backtest.py  calibrate.py  evaluate.py  train.py
(+1 files in other folders)
