[project]
name = "euro-ml"
version = "1.0.0"
description = "Purchase prediction and product recommendation engine for Euro Supermercados"
requires-python = ">=3.13"
dependencies = [
    # Core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    # ML
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "scipy>=1.11.0",
    # Recommendations
    "mlxtend>=0.23.0",
    "python-dateutil>=2.8.0",
    # Visualization
    "matplotlib>=3.8.0",
    "shap>=0.44.0",
    # API & Config
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    # MLOps
    "dvc>=3.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0.0",
]
